Fix tag spacing

--- a/feedback/static/feedback.css
+++ b/feedback/static/feedback.css
@@ -42,9 +42,11 @@ body {
 }
 
 /* response panel */
-.panel.response-panel .panel-body,
-.panel.response-panel .panel-footer {
+.panel.response-panel .panel-body {
 	padding: 0.4em;
+}
+.panel.response-panel .panel-footer {
+	padding: 0.1em 0.4em 0.2em 0.4em;
 }
 .panel.response-panel .form-group {
 	margin-bottom: 0.6em;
